syntax = "proto3";
package rpc;

import "github.com/iost-official/go-iost/core/tx/tx.proto";
import "github.com/iost-official/go-iost/core/block/block.proto";
import "github.com/iost-official/go-iost/core/event/event.proto";
import "google/api/annotations.proto";
import "google/protobuf/Empty.proto";

// rpc apis
service Apis {
    // get the current height of the blockchain
    rpc GetHeight (google.protobuf.Empty) returns (HeightRes) {
        option (google.api.http) = {
            get: "/getHeight"
        };
    }
    // get the tx by hash
    rpc GetTxByHash (HashReq) returns (txRes) {
        option (google.api.http) = {
            get: "/getTxByHash/{hash}"
        };
    }
    // get receipt by hash
    rpc GetTxReceiptByHash(HashReq) returns (txReceiptRes) {
        option (google.api.http) = {
            get: "/getTxReceiptByHash/{hash}"
        };
    }
    // get receipt by txhash
    rpc GetTxReceiptByTxHash(HashReq) returns (txReceiptRes) {
        option (google.api.http) = {
            get: "/getTxReceiptByTxHash/{hash}"
        };
    }
    // get the block by hash
    rpc GetBlockByHash (BlockByHashReq) returns (BlockInfo) {
        option (google.api.http) = {
            get: "/getBlockByHash/{hash}/{complete}"
        };
    }
    // get the block by number
    rpc getBlockByNum (BlockByNumReq) returns (BlockInfo) {
        option (google.api.http) = {
            get: "/getBlockByNum/{num}/{complete}"
        };
    }
    // get the balance of some account by account ID
    rpc GetBalance (GetBalanceReq) returns (GetBalanceRes) {
        option (google.api.http) = {
            get: "/getBalance/{ID}/{useLongestChain}"
        };
    }
    // get the Net ID
    rpc GetNetID (google.protobuf.Empty) returns (GetNetIDRes) {
        option (google.api.http) = {
            get: "/getNetID"
        };
    }
    // get the value of the corresponding key in stateDB
    rpc GetState (GetStateReq) returns (GetStateRes) {
        option (google.api.http) = {
            get: "/getState/{key}"
        };
    }
    // receive encoded tx
    rpc SendRawTx (RawTxReq) returns (SendRawTxRes) {
        option (google.api.http) = {
            post: "/sendRawTx"
            body: "*"
        };
    }
    // not supported yet
    rpc EstimateGas (RawTxReq) returns (GasRes) {
        option (google.api.http) = {
            post: "/estimateGas"
            body: "*"
        };
    }
    // subscribe an event
    rpc Subscribe (SubscribeReq) returns (stream SubscribeRes) {
        option (google.api.http) = {
            post: "/subscribe"
            body: "*"
        };
    }
}

message HashReq {
    //transaction hash
    string hash=1;
}

message BlockByHashReq {
    //block hash
    string hash=1;
    // complete means return the whole block or just blockhead+txhash_list
    bool complete=2;
}

message BlockByNumReq {
    //block number
    int64 num=1;
    // complete means return the whole block or just blockhead+txhash_list
    bool complete=2;    
}

message GetBalanceReq {
    //account ID
    string ID=1;
    // useLongestChain means whether geting the balance also from pending blocks(in the longest chain)
    bool useLongestChain = 2;
}

message GetStateReq {
    //the key in the StateDB
    string key=1;
    // get the value from StateDB,field is needed if StateDB[key] is a map.(we get StateDB[key][field] in this case)
    string field = 2;
}

message RawTxReq {
    // the rawdata of a tx
    bytes data=1;
}

message SubscribeReq {
    //type of event:0-TransactionResult,1-ContractEvent,2-ContractUserEvent,3-ContractSystemEvent
    repeated event.Event.Topic topics=1;
}

message HeightRes {
    // the height of the blockchain
    int64 height=1;
}

message GetBalanceRes {
    // the queried balance
    int64 balance=1;
}

message GetNetIDRes {
    //NetID
    string ID=1;
}

message GetStateRes {
    //the value of the corresponding key in the StateDB
    string value=1;
}

message SendRawTxRes {
    // the hash of the received transaction
    string hash=1;
}

message GasRes {
    //not support yet
    uint64 gas=1;
}

message txRes {
    //the queried transaction
    tx.TxRaw txRaw = 1;
    //transaction hash
    bytes hash = 2;
}

message txReceiptRes {
    //transaction receipt
    tx.TxReceiptRaw txReceiptRaw = 1;
    bytes hash = 2;
}

message BlockInfo {
    //BlockHead
    block.BlockHead head = 1;
    //block hash
    bytes hash = 2;
    //transaction list,works when complete is true
    repeated tx.TxRaw txs = 3;
    //transaction hash list,works when complete is false
    repeated bytes txhash= 4 ;
    //transaction receipt list
    repeated tx.TxReceiptRaw receipts = 5;
    //transaction receiptHash list
    repeated bytes receiptHash = 6;
}

message SubscribeRes {
    //event
    event.Event ev=1;
}
